--- a/photos/messager.html
+++ b/photos/messager.html
@@ -2,34 +2,35 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Чат</title>
-  <link href="/css/massager.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Чат</title>
+	<link href="/css/massager.css" rel="stylesheet">
 </head>
 
 <body>
-  <section class="chat">
-    <h1 class="visually-hidden">Чат</h1>
+	<section class="chat">
+		<h1 class="visually-hidden">Чат</h1>
 
-    <div class="chat-content">
+		<div class="chat-content">
 
-    </div>
+		</div>
 
-    <form class="chat-form" action="https://echo.htmlacademy.ru/courses" method="post">
-      <input class="chat-form-input" type="text" aria-label="Ваше сообщение" placeholder="Напишите что-нибудь" required>
-      <button class="chat-form-button" type="submit">Отправить</button>
-    </form>
-  </section>
+		<form class="chat-form" action="https://echo.htmlacademy.ru/courses" method="post">
+			<input class="chat-form-input" type="text" aria-label="Ваше сообщение" placeholder="Напишите что-нибудь"
+				required>
+			<button class="chat-form-button" type="submit">Отправить</button>
+		</form>
+	</section>
 
-  <template id="message-template">
-    <div class="chat-message" tabindex="0">
-      <span class="chat-message-name">Неопознанный енот</span>
-      <p class="chat-message-text"></p>
-      <button class="chat-message-button" type="button">Удалить</button>
-    </div>
-  </template>
+	<template id="message-template">
+		<div class="chat-message" tabindex="0">
+			<span class="chat-message-name">Синий Пендальф</span>
+			<p class="chat-message-text"></p>
+			<button class="chat-message-button" type="button">Удалить</button>
+		</div>
+	</template>
 
-  <script src="/js/messager.js"></script>
+	<script src="/js/messager.js"></script>
 </body>
 
 </html>
