--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </fieldset>
 
             <!-- Форма редактирования изображения -->
-            <div class="img-upload__overlay ">
+            <div class="img-upload__overlay hidden">
               <!-- Добавить класс hidden-->
               <div class="img-upload__wrapper">
                 <div class="img-upload__preview-container">
@@ -257,12 +257,19 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+
   <script src="/js/data.js"></script>
+
+
+  <script src="/js/upload.js"></script>
+  <script src="/js/load.js"></script>
+
   <script src="/js/gallery.js"></script>
-  <script src="/js/preview.js"></script>
   <script src="/js/form.js"></script>
+  <script src="/js/preview.js"></script>
   <script src="/js/levelPin.js"></script>
   <script src="/js/hashtags.js"></script>
+  <script src="/js/coments.js"></script>
 
 
 </body>
