--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </ul>
 
 
-          <template>
+          <template id="comment">
             <li class="social__comment">
               <img class="social__picture" src="img/avatar-4.svg" alt="Аватар комментатора фотографии" width="35"
                 height="35">
